# send_emails_rust_csharp

./: README.md  pull_request_template.md
csharp/: Program.cs  send_email.csproj
rust/: Cargo.toml  main.rs
